# hume-ish

./: .env.example  .gitignore  OVERVIEW.md  README.md  pyproject.toml
backend/: config.py  main.py
backend/api/: routes.py
backend/conversation/: session.py
backend/ingestion/: chunker.py  cleaner.py  embedder.py  scraper.py  store.py
backend/llm/: claude_client.py  prompts.py
backend/rag/: reranker.py  retriever.py
backend/voice/: stt.py  tts.py
data/raw/: dialogues_natural_religion.txt  enquiry_principles_morals.txt  my_own_life.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: chat.ts
frontend/src/components/: VoiceOrb.css  VoiceOrb.tsx
frontend/src/components/ui/: ai-voice-input.tsx  gradient-text.tsx  liquid-glass-button.tsx  shader-animation.tsx  sparkles.tsx
frontend/src/hooks/: useVoiceRecorder.ts
scripts/: inspect_corpus.py  run_ingestion.py
tests/: conftest.py  test_chat.py
